# LearningC

./: CMakeLists.txt  a.out  basic_data_types_and_vars.c  calculator  circle_circumference  constants.c  data_types.c  escape_and_comments.c  first_program.c  format_specifiers.c  gross_pay  temperature_conversion
fromcs171/: gross_pay.c
fromcs265/lab4/: answers  instructions  main.c
lesson files/: a.out  argumented_operators.c  argumented_operators.cpp  arithmetic_operators.c  commenting.c  escape_seq.c  if_statements.c  math_functions.c  switch_statements.c  user_input.c
programs/: a.out  calculator.c  circle_circumference.c  hypotenuse_calculator.c  temperature_conversion.c
